--- a/Csystems.Aula02.Web/Views/Clientes/Excluir.cshtml
+++ b/Csystems.Aula02.Web/Views/Clientes/Excluir.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Excluir</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Deseja realmente deletar?</h3>
 <div>
     <h4>Cliente</h4>
     <hr />
@@ -33,7 +33,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Excluir" class="btn btn-default" /> |
             @Html.ActionLink("Voltar para lista.", "Lista")
         </div>
     }
