--- a/Csystems.Aula02.Web/Views/Clientes/Incluir.cshtml
+++ b/Csystems.Aula02.Web/Views/Clientes/Incluir.cshtml
@@ -1,4 +1,4 @@
-﻿@model Csystems.Aula02.Dominio.Entidades.Cliente
+﻿@model Csystems.Aula02.Web.Views.ViewModels.ClienteviewModel
 
 @{
     ViewBag.Title = "Incluir";
@@ -15,10 +15,18 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Nome, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Nome, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.Nome, "", new {@class = "text-danger"})
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Fantasia, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Fantasia, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Fantasia, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -41,3 +49,7 @@
 <div>
     @Html.ActionLink("Voltar para lista.", "Lista")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
